add example values for swagger input models
