# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.usersRefreshTokensInput"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.usersRefreshTokensInput"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.tokenResponse"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.tokenResponse"
                         }
                     },
                     "400": {
@@ -302,7 +302,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.likeCommentInput"
+                            "$ref": "#/definitions/internal_handler_http.likeCommentInput"
                         }
                     }
                 ],
@@ -510,7 +510,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.RequestForModeratorActionInput"
+                            "$ref": "#/definitions/internal_handler_http.RequestForModeratorActionInput"
                         }
                     }
                 ],
@@ -584,7 +584,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler.createPostInput"
+                            "$ref": "#/definitions/internal_handler_http.createPostInput"
                         }
                     }
                 ],
@@ -592,7 +592,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler.createPostResponse"
+                            "$ref": "#/definitions/internal_handler_http.createPostResponse"
                         }
                     },
                     "400": {
@@ -789,7 +789,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.createCommentInput"
+                            "$ref": "#/definitions/internal_handler_http.createCommentInput"
                         }
                     }
                 ],
@@ -797,7 +797,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.createCommentResponse"
+                            "$ref": "#/definitions/internal_handler_http.createCommentResponse"
                         }
                     },
                     "400": {
@@ -940,20 +940,20 @@
                 "summary": "Like or dislike post",
                 "parameters": [
                     {
-                        "description": "like type: 1 - like, 2 - dislike",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler.likePostInput"
-                        }
-                    },
-                    {
                         "type": "integer",
                         "description": "ID of post",
                         "name": "post_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "like type: 1 - like, 2 - dislike",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_handler_http.likePostInput"
+                        }
                     }
                 ],
                 "responses": {
@@ -1021,7 +1021,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.usersSignInInput"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.usersSignInInput"
                         }
                     }
                 ],
@@ -1029,7 +1029,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.tokenResponse"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.tokenResponse"
                         }
                     },
                     "400": {
@@ -1084,7 +1084,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.usersSignUpInput"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.usersSignUpInput"
                         }
                     }
                 ],
@@ -1190,18 +1190,19 @@
         }
     },
     "definitions": {
-        "github.com_alseiitov_real-time-forum_internal_handler.RequestForModeratorActionInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.RequestForModeratorActionInput": {
             "type": "object",
             "properties": {
                 "action": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "accept"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.createCommentInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.createCommentInput": {
             "type": "object",
             "properties": {
                 "data": {
@@ -1212,22 +1213,27 @@
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.createCommentResponse": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.createCommentResponse": {
             "type": "object",
             "properties": {
                 "commentID": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.createPostInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.createPostInput": {
             "type": "object",
             "properties": {
                 "categories": {
                     "type": "array",
                     "items": {
                         "type": "integer"
-                    }
+                    },
+                    "example": [
+                        1,
+                        2
+                    ]
                 },
                 "data": {
                     "type": "string"
@@ -1240,31 +1246,34 @@
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.createPostResponse": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.createPostResponse": {
             "type": "object",
             "properties": {
                 "postID": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.likeCommentInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.likeCommentInput": {
             "type": "object",
             "properties": {
                 "likeType": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.likePostInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.likePostInput": {
             "type": "object",
             "properties": {
                 "likeType": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.tokenResponse": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.tokenResponse": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -1275,7 +1284,7 @@
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.usersRefreshTokensInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.usersRefreshTokensInput": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -1286,40 +1295,49 @@
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.usersSignInInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.usersSignInInput": {
             "type": "object",
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Password123@"
                 },
                 "usernameOrEmail": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "jogndoe"
                 }
             }
         },
-        "github.com_alseiitov_real-time-forum_internal_handler.usersSignUpInput": {
+        "github.com_alseiitov_real-time-forum_internal_handler_http.usersSignUpInput": {
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 18
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "johndoe@gmail.com"
                 },
                 "firstName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "John"
                 },
                 "gender": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "lastName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Doe"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Password123@"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "johndoe"
                 }
             }
         },
@@ -1331,18 +1349,19 @@
                 }
             }
         },
-        "internal_handler.RequestForModeratorActionInput": {
+        "internal_handler_http.RequestForModeratorActionInput": {
             "type": "object",
             "properties": {
                 "action": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "accept"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "internal_handler.createCommentInput": {
+        "internal_handler_http.createCommentInput": {
             "type": "object",
             "properties": {
                 "data": {
@@ -1353,22 +1372,27 @@
                 }
             }
         },
-        "internal_handler.createCommentResponse": {
+        "internal_handler_http.createCommentResponse": {
             "type": "object",
             "properties": {
                 "commentID": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "internal_handler.createPostInput": {
+        "internal_handler_http.createPostInput": {
             "type": "object",
             "properties": {
                 "categories": {
                     "type": "array",
                     "items": {
                         "type": "integer"
-                    }
+                    },
+                    "example": [
+                        1,
+                        2
+                    ]
                 },
                 "data": {
                     "type": "string"
@@ -1381,31 +1405,34 @@
                 }
             }
         },
-        "internal_handler.createPostResponse": {
+        "internal_handler_http.createPostResponse": {
             "type": "object",
             "properties": {
                 "postID": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "internal_handler.likeCommentInput": {
+        "internal_handler_http.likeCommentInput": {
             "type": "object",
             "properties": {
                 "likeType": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "internal_handler.likePostInput": {
+        "internal_handler_http.likePostInput": {
             "type": "object",
             "properties": {
                 "likeType": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "internal_handler.tokenResponse": {
+        "internal_handler_http.tokenResponse": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -1416,7 +1443,7 @@
                 }
             }
         },
-        "internal_handler.usersRefreshTokensInput": {
+        "internal_handler_http.usersRefreshTokensInput": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -1427,40 +1454,49 @@
                 }
             }
         },
-        "internal_handler.usersSignInInput": {
+        "internal_handler_http.usersSignInInput": {
             "type": "object",
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Password123@"
                 },
                 "usernameOrEmail": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "jogndoe"
                 }
             }
         },
-        "internal_handler.usersSignUpInput": {
+        "internal_handler_http.usersSignUpInput": {
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 18
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "johndoe@gmail.com"
                 },
                 "firstName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "John"
                 },
                 "gender": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "lastName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Doe"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Password123@"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "johndoe"
                 }
             }
         },
@@ -1578,9 +1614,6 @@
                     "type": "integer"
                 },
                 "lastName": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 },
                 "registered": {
