# internal/model/user.go
@@ -10,7 +10,7 @@ type User struct {
 	Age        int       `json:"age,omitempty"`
 	Gender     int       `json:"gender,omitempty"`
 	Email      string    `json:"email,omitempty"`
-	Password   string    `json:"password,omitempty"`
+	Password   string    `json:"-"`
 	Registered time.Time `json:"registered,omitempty"`
 	Role       int       `json:"role,omitempty"`
 	Avatar     string    `json:"avatar,omitempty"`
